@@ -9,9 +9,16 @@ application {
 }
 
 dependencies {
+  testImplementation(project(":river-server-app"))
+  testImplementation(testFixtures(project(":river-server-app")))
   testImplementation(project(":river-engine"))
   testImplementation(project(":river-protocol"))
   testImplementation(project(":river-server"))
   testImplementation(testFixtures(project(":river-client")))
   testImplementation(testFixtures(project(":river-server")))
+}
+
+tasks.withType<Test>().configureEach {
+  maxHeapSize = "1g"
+  jvmArgs("--enable-native-access=ALL-UNNAMED")
 }
